# qa_guru_diploma

./: .env.bstack  .env.local_emulator  .env.web  .gitignore  README.md  config.py  data.py  project.py  pyproject.toml  pytest.ini  requirements.txt
qa_guru_diploma/: application.py
qa_guru_diploma/data/: user.py  user_data.py
qa_guru_diploma/data/json_schemas/: get_non_existent_repo.json  get_repo.json
qa_guru_diploma/model/components/: header.py
qa_guru_diploma/model/pages/: login_page.py
qa_guru_diploma/model/pages/mobile/: simple_app_main_page.py  wiki_main_page.py  wiki_onboarding_page.py
qa_guru_diploma/model/pages/web/: login_page.py
qa_guru_diploma/utils/: allure_utils.py  response_utils.py  schema.py
tests/: conftest.py
tests/api/: README.md  test_github.py  test_reqres_api.py
tests/mobile/: README.md
tests/mobile/android_app/: test_wikipedia.py
tests/mobile/ios_app/: test_simple_app.py
tests/ui/: README.md  conftest.py  test_litefinance_login.py
